--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 <section>
     <div class="container">
-        <div class="big-galary">
+        <div class="big-galar">
         <div class="galary-first">
             <img src="img/gallery_1.png" width="200px" alt="">
             <img src="img/gallery_2.png" width="200px" alt="">
