--- a/index.html
+++ b/index.html
@@ -37,52 +37,52 @@
 
     </section>
 
-    <section>
+    <section class="servises">
         <div class="container">
-            <h2 class="services">Services We <br> <span>Provide</span></h2>
-            <div class="staels">
-                <div class="hair-cut-div">
-                    <span class="qaychi"><img src="img/qaychi.svg" alt="error"></span>
-                    <h3 class="hair-cut-title">Hair Cut</h3>
-                    <p class="haircut-txt">long established fact that a reacted by the readable content of
-                        hen looking at.</p>
-                </div>
-
-                <div class="beard-cut-div">
-                    <span class="aparat"><img src="img/aparat.svg" alt="error"></span>
-                    <h3 class="beard-cut-title">Beard Cut</h3>
-                    <p class="beard-cut-txt">long established fact that a reacted by the readable content of
-                        hen looking at.</p>
-                </div>
-
-                <div class="facial-pack-div">
-                    <span class="krem"><img src="img/jrem.svg" alt="error"></span>
-                    <h3 class="facial-pack-title">Facial Pack</h3>
-                    <p class="facial-pack-txt">long established fact that a reacted by the readable content of
-                        hen looking at.</p>
-                </div>
-
-            </div>
+            <h3 class="history-title">Services We <span class="history-span">Provide</span></h3>
+            <ul class="servises-list ">
+                <li class="servises-item ">
+                    <div class="servis-div-all all imgg">
+                        <h4 class="servis-title ">Hair Cut</h4>
+                        <p class="servises-text">long established fact that a reacted by the readable content of
+                            hen looking at.</p>
+                    </div>
+                </li>
+                <li class="servises-item ">
+                    <div class="servis-item-all1 all imgg1">
+                        <h4 class="servis-title1 ">Hair Cut</h4>
+                        <p class="servises-text1">long established fact that a reacted by the readable content of
+                            hen looking at.</p>
+                    </div>
+                </li>
+                <li class="servises-item ">
+                    <div class="servis-item-all1 all imgg2">
+                        <h4 class="servis-title1 ">Hair Cut</h4>
+                        <p class="servises-text1">long established fact that a reacted by the readable content of
+                            hen looking at.</p>
+                    </div>
+                </li>
+            </ul>
         </div>
     </section>
 
-<section>
-    <div class="container">
-        <div class="big-galar">
-        <div class="galary-first">
-            <img src="img/gallery_1.png" width="200px"  alt="">
-            <img src="img/gallery_2.png" width="200px"  alt="">
-            <img src="img/gallery_3.png" width="200px"  alt="">
-        </div>
+    <section>
+        <div class="container">
+            <div class="big-galar">
+                <div class="galary-first">
+                    <img src="img/gallery_1.png" width="200px" alt="">
+                    <img src="img/gallery_2.png" width="200px" alt="">
+                    <img src="img/gallery_3.png" width="200px" alt="">
+                </div>
 
-        <div class="galary-second">
-            <img src="img/gallery_4.png" width="200px"  alt="">
-            <img src="img/gallery_5.png" width="200px"  alt="">
-            <img src="img/gallery_6.png" width="200px"  alt="">
+                <div class="galary-second">
+                    <img src="img/gallery_4.png" width="200px" alt="">
+                    <img src="img/gallery_5.png" width="200px" alt="">
+                    <img src="img/gallery_6.png" width="200px" alt="">
+                </div>
+            </div>
         </div>
-    </div>
-</div>
-</section>
+    </section>
 
 </body>
 
